--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -4,20 +4,18 @@
       <report-type-sidebar
           title="Report Coverage Dates"
           (status)='onNotify($event)'
-          [searchField]="searchField"
-          [sidebarLinks]="sidebarLinks"
-          [specialreports]="specialreports"  
+          [specialreports]="specialreports"
           [regularreports]="regularreports"
-          
+
         >
       </report-type-sidebar>
     </div>
     <div *ngIf="step==='step_2'">
       <form-sidebar
-        title="Transaction Categories"
-        [sidebarLinks]="sidebarLinks"
+        [transactionCategories]="transactionCategories"
         [searchField]="searchField"
         [cashOnHand]="cashOnHand"
+        title="Transaction Categories"
         (status)='onNotify($event)'
       >
       </form-sidebar>
