--- a/front-end/src/app/shared/partials/form-sidebar/form-sidebar.component.html
+++ b/front-end/src/app/shared/partials/form-sidebar/form-sidebar.component.html
@@ -16,7 +16,7 @@
     <ul class="form-sidebar__links" >
       <li
         [ngClass]="itemSelected === categoryType?.value ? 'form-sidebar-item selected' : 'form-sidebar-item'"
-        *ngFor="let categoryType of sidebarLinks"
+        *ngFor="let categoryType of transactionCategories"
       >
         <div
           [ngClass]="itemSelected === categoryType?.value ? 'form-sidebar-item-box selected' : 'form-sidebar-item-box'"
@@ -66,18 +66,20 @@
           </ul>
         </div>
       </li>
-      <li
-        class="form-sidebar-item"
-        *ngIf="cashOnHand?.showCashOnHand"
-      >
-        <div class="form-sidebar-item__text">
-          {{ cashOnHand.text }}
-        </div>
-        <div class="form-sidebar-item__value">
-          ${{ cashOnHand.amount }}
-        </div>
-      </li>
     </ul>
+  </section>
+  <footer>
+    <div
+      class="form-sidebar__item"
+      *ngIf="cashOnHand?.showCashOnHand"
+    >
+      <div class="form-sidebar-item__text">
+        {{ cashOnHand.text }}
+      </div>
+      <div class="form-sidebar-item__value">
+        $0
+      </div>
+    </div>
     <div class="form-sidebar__btns">
       <div class="btn-row">
         <button
@@ -96,5 +98,5 @@
         </button>
       </div>
     </div>
-  </section>
+  </footer>
 </div>
