--- a/front-end/src/app/shared/scss/_custom-colors.scss
+++ b/front-end/src/app/shared/scss/_custom-colors.scss
@@ -13,6 +13,7 @@ $pelorous: #35BDBB; // light green
 $dodgerBlue: #30B9FB; // light blue
 $spindle: #B4DAEC; // really light blue
 $crusta: #F77B42; // orange
+$mineShaft: #212121;
 
 $primaryBlue: $blueZodiac;
 $secondaryBlue: $horizon;
