Reorganizing form 3x components and child components

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -11,14 +11,14 @@
       </report-type-sidebar>
     </div>
     <div *ngIf="step==='step_2'">
-      <form-sidebar
+      <transaction-categories-sidebar
         [transactionCategories]="transactionCategories"
         [searchField]="searchField"
         [cashOnHand]="cashOnHand"
         title="Transaction Categories"
         (status)='onNotify($event)'
       >
-      </form-sidebar>
+      </transaction-categories-sidebar>
     </div>
   </div>
   <div
