--- a/front-end/src/app/forms/form-3x/transaction-categories-sidebar/transaction-categories-sidebar.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-categories-sidebar/transaction-categories-sidebar.component.scss
@@ -25,7 +25,7 @@
   section {
     .form-sidebar__links {
       list-style-type: none;
-      min-height: 430px;
+      min-height: 445px;
       margin-top: 15px;
       .form-sidebar-item {
         border-bottom: 1px solid $white;
@@ -130,7 +130,12 @@
   footer {
     background-color: $mineShaft;
     .form-sidebar__item {
+      border-bottom: 1px solid $white;
       color: $white;
+      height: 25px;
+      line-height: 25px;
+      padding-bottom: 10px;
+      vertical-align: middle;
       .form-sidebar-item__text {
         color: $white;
         float: left;
@@ -143,6 +148,7 @@
       }
     }
     .form-sidebar__btns {
+      padding-bottom: 10px;
       padding-top: 15px;
       text-align: center;
       .btn-row {
