--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -215,6 +215,7 @@
                 <button
                   class="btn btn-primary btn-right"
                   type="submit"
+                  [disabled]="frmType.controls.reasonTypeRadio.status === 'INVALID'"
                 >
                   Next
                 </button>
