--- a/front-end/src/app/shared/partials/sign/sign.component.html
+++ b/front-end/src/app/shared/partials/sign/sign.component.html
@@ -229,8 +229,9 @@
        </div>
        <div class="grid-row">
           <div class="grid-row__col grid-row__col--12">
-          <h4>* = Required</h4>
+            <h4>* = Required</h4>
           </div>
-      </div>        </footer>
+      </div>
+    </footer>
    </form>
  </div> <!-- ./signee-container -->
