--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -1,4 +1,21 @@
 <div class="transaction-type-container">
+    <header>
+      <div class="header-content">
+        <div class="float-left">
+          <h1>Transaction Type</h1>
+        </div>
+        <div class="float-right">
+          <button
+            type="button"
+            class="btn btn-link btn-options"
+          >
+            <span class="ellipsis-icon" aria-hidden="true"></span>
+            <span class="sr-only">Click for more options</span>
+          </button>
+        </div>
+      </div>
+      <hr />
+    </header>
     <form
       [formGroup]="frmOption"
       (ngSubmit)="doValidateOption()"
