--- a/front-end/src/app/shared/partials/sidebar/sidebar.component.html
+++ b/front-end/src/app/shared/partials/sidebar/sidebar.component.html
@@ -42,7 +42,7 @@
                 >
                 {{committee_form.form_description}}
                 <br />
-                {{committee_form.due_date}}
+                due {{committee_form.due_date}}
                 </a>
               </div>
               <div class="list-item__info">
