--- a/front-end/src/app/forms/form-3x/transaction-categories-sidebar/transaction-categories-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-categories-sidebar/transaction-categories-sidebar.component.html
@@ -82,12 +82,13 @@
     </div>
     <div class="form-sidebar__btns">
       <div class="btn-row">
-        <button
-          type="button"
+        <a
           class="btn btn-secondary-gray"
+          [routerLink]="['/forms/form/', '3x']"
+          [queryParams]="{ step: 'financial_summary' }"
         >
           Summary
-        </button>
+        </a>
       </div>
       <div class="btn-row">
         <button
