--- a/front-end/src/app/forms/form-3x/transaction-categories-sidebar/transaction-categories-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-categories-sidebar/transaction-categories-sidebar.component.html
@@ -84,7 +84,7 @@
       <div class="btn-row">
         <a
           class="btn btn-secondary-gray"
-          [routerLink]="['/forms/form/', '3x']"
+          [routerLink]="['/forms/form/', '3X']"
           [queryParams]="{ step: 'financial_summary' }"
         >
           Summary
