--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -1,11 +1,8 @@
 <div class="transaction-type-container">
     <header>
       <div class="header-content">
-        <div class="float-left"  *ngIf="showForm">
+        <div class="float-left">
           <h1>Transaction Type</h1>
-        </div>
-        <div class="float-left" *ngIf="!showForm">
-          <h1>Financial Summary</h1>
         </div>
         <div class="float-right">
           <button
