--- a/front-end/src/app/shared/scss/_global.scss
+++ b/front-end/src/app/shared/scss/_global.scss
@@ -8,6 +8,7 @@
 @import '../../../../node_modules/bootstrap/scss/nav';
 @import '../../../../node_modules/bootstrap/scss/navbar';
 @import '../../../../node_modules/bootstrap/scss/modal';
+@import '../../../../node_modules/bootstrap/scss/utilities';
 
 @import url('https://fonts.googleapis.com/css?family=Karla');
 @font-face {
