--- a/front-end/src/app/shared/scss/classes/_icons.scss
+++ b/front-end/src/app/shared/scss/classes/_icons.scss
@@ -79,3 +79,18 @@
   @extend .fas;
   @extend .fa-ellipsis-h;
 }
+
+.sort-icon {
+  @extend .fas;
+  @extend .fa-sort;
+}
+
+.sort-icon-asc {
+  @extend .fas;
+  @extend .fa-sort-up;
+}
+
+.sort-icon-desc {
+  @extend .fas;
+  @extend .fa-sort-down;
+}
