Making sort function a pipe so it can be used across the app in other components

--- a/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
+++ b/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
@@ -98,7 +98,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let row of tab1Data.rows">
+              <tr *ngFor="let row of tab1Data.rows | orderBy: {property: column, direction: direction}">
                 <td>
                   {{ row.rowKey.text }}
                  <button
