Fne bug fixes updated mahendra sprint7 (#181)
* print preview related UI changes

print preview related UI changes

* print preview related UI changes

print preview related UI changes

* FNE 565 changes

FNE 565 changes

* FNE 565 changes

FNE 565 changes

* FNE 565 related changes

FNE 565 related changes

* print preview related changes

print preview related changes

* print preview test 

print preview test

* print preview changes

print preview changes

* print preview changes

print preview changes

* sprint7 bug fixing

sprint7 bug fixing

* sprint7 bug fixing

sprint7 bug fixing

* sprint7 bug fixing

sprint7 bug fixing

* sprint7 bug fixing

sprint7 bug fixing

* sprint7 bug fixing

sprint7 bug fixing

* sprint 7 bug fixing

sprint 7 bug fixing

* sprint7 bug fixing

sprint7 bug fixing

--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -4,9 +4,11 @@
       <report-type-sidebar
           title="Report Coverage Dates"
           (status)='onNotify($event)'
-          [specialreports]="specialreports"
-          [regularreports]="regularreports"
-
+          [stateSelection]="stateSelection"
+          [cashOnHand]="cashOnHand"
+          [specialreports]=specialreports
+          [regularreports]=regularreports
+          [selectedreporttype]=reporttype
         >
       </report-type-sidebar>
     </div>
@@ -49,7 +51,11 @@
         class="form__step"
         [hidden]="step!=='step_1'"
       >
-        <f3x-report-type></f3x-report-type>
+        <f3x-report-type>
+          [formRadioOptionsVisible]="formRadioOptionsVisible"
+          [reportTypeRadio]="reportTypeRadio"
+          (status)='onNotify($event)'
+        </f3x-report-type>
       </div>
 
       <div
