--- a/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.html
+++ b/front-end/src/app/forms/form-3x/report-type-sidebar/report-type-sidebar.component.html
@@ -77,71 +77,12 @@
         </span>
       </button>
         </div>
-      <div class="form-row">
-          <select id="state" name="state" class="form-control">
+
+     <div class="form-row">
+          <select id="state" [(ngModel)]="selectedElectionState" name="state" class="form-control" #electionState (change)="selectStateChange($event.target.value)">
           <option value="---">--- </option>
-          <option value="AL">Alabama</option>
-          <option value="AK">Alaska </option>
-          <option value="AS">American Samoa</option>
-          <option value="AZ">Arizona</option>
-          <option value="AR">Arkansas</option>
-          <option value="CA">California</option>
-          <option value="CO">Colorado</option>
-          <option value="CT">Connecticut</option>
-          <option value="DE">Delaware</option>
-          <option value="DC">District of Columbia</option>
-          <option value="FL">Florida</option>
-          <option value="GA">Georgia</option>
-          <option value="GU">Guam</option>
-          <option value="HI">Hawaii</option>
-          <option value="ID">Idaho</option>
-          <option value="IL">Illinois</option>
-          <option value="IN">Indiana</option>
-          <option value="IA">Iowa</option>
-          <option value="KS">Kansas</option>
-          <option value="KY">Kentucky</option>
-          <option value="LA">Louisiana</option>
-          <option value="ME">Maine</option>
-          <option value="MP">Northern Mariana Islands</option>
-          <option value="MD">Maryland</option>
-          <option value="MA">Massachusetts</option>
-          <option value="MI">Michigan</option>
-          <option value="MN">Minnesota</option>
-          <option value="MS">Mississippi</option>
-          <option value="MO">Missouri</option>
-          <option value="MT">Montana</option>
-          <option value="NE">Nebraska</option>
-          <option value="NV">Nevada</option>
-          <option value="NH">New Hampshire</option>
-          <option value="NJ">New Jersey</option>
-          <option value="NM">New Mexico</option>
-          <option value="NY">New York</option>
-          <option value="NC">North Carolina</option>
-          <option value="ND">North Dakota</option>
-          <option value="OH">Ohio</option>
-          <option value="OK">Oklahoma</option>
-          <option value="OR">Oregon</option>
-          <option value="PA">Pennsylvania</option>
-          <option value="PR">Puerto Rico</option>
-          <option value="RI">Rhode Island</option>
-          <option value="SC">South Carolina</option>
-          <option value="SD">South Dakota</option>
-          <option value="TN">Tennessee</option>
-          <option value="TX">Texas</option>
-          <option value="UT">Utah</option>
-          <option value="VT">Vermont</option>
-          <option value="VI">Virginia</option>
-          <option value="VA">Virgin Islands</option>
-          <option value="WA">Washington</option>
-          <option value="WV">West Virginia</option>
-          <option value="WI">Wisconsin</option>
-          <option value="WY">Wyoming</option>
-          <option value="ZZ">Foreign Countries</option>
-          <option value="US">United States</option>
-          <option value="AA">Armed Forces Americas</option>
-          <option value="AE">Armed Forces Europe</option>
-          <option value="AP">Armed Forces Pacific</option>
-        </select>
+          <option *ngFor='let state of selectedreporttype.election_state' [value]="state.state">{{state.state_description}}</option>
+         </select>
       </div>
       <div class="form-row">
         <label for="electionDate">
@@ -162,8 +103,9 @@
      
       </div>
       <div class="form-row">
-          <select id="electiondate" name="state" class="form-control">
+          <select id="electiondate" name="electiondate" [(ngModel)]="selectedElectionDate" class="form-control" #electionDate (change)="selectElectionDateChange($event.target.value)">
               <option value="---">--- </option>
+              <option *ngFor='let electionDate of electionDates.dates' [value]="electionDate.election_date">{{electionDate.election_date}}</option>
           </select> 
         
       </div>
