--- a/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
+++ b/front-end/src/app/forms/form-3x/financial-summary/financial-summary.component.html
@@ -104,6 +104,7 @@
                   <button
                    type="button"
                    class="btn btn-link btn-info"
+                   ngbTooltip="{{ row.rowKey.infoText }}"
                    *ngIf="row.rowKey.infoIcon"
                   >
                    <i class="info-icon" aria-hidden="true"></i>
@@ -166,6 +167,7 @@
                   <button
                    type="button"
                    class="btn btn-link btn-info"
+                   ngbTooltip="{{ row.rowKey.infoText }}"
                    *ngIf="row.rowKey.infoIcon"
                   >
                    <i class="info-icon" aria-hidden="true"></i>
@@ -187,6 +189,7 @@
                   <button
                    type="button"
                    class="btn btn-link btn-info"
+                   ngbTooltip="{{ row.rowKey.infoText }}"
                    *ngIf="row.rowKey.infoIcon"
                   >
                    <i class="info-icon" aria-hidden="true"></i>
