--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -14,7 +14,10 @@
           </ng-container>
           <ng-container *ngIf="row.cols.type === 'select'">
             <ng-select class="transaction-type-select">
-              <ng-option *ngFor="let item of selectedOptions" [value]="item.value">
+              <ng-option
+                *ngFor="let item of selectedOptions"
+                [value]="item.value"
+              >
                 {{ item.text }}
               </ng-option>
             </ng-select>
@@ -32,6 +35,16 @@
             </label>
             <ng-container *ngIf="col.type === 'text'">
               <input type="text" name="{{ col.name }}" class="form-control" />
+            </ng-container>
+            <ng-container *ngIf="col.type === 'select' && col.name === 'contributorState'">
+              <ng-select class="state-select">
+                <ng-option
+                  *ngFor="let item of states"
+                  [value]="item.code"
+                >
+                  {{ item.name }}
+                </ng-option>
+              </ng-select>
             </ng-container>
           </div>
         </div>
