--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.html
@@ -1,4 +1,4 @@
-<div class="individual-receipt-container" *ngIf="formVisible">
+<div class="individual-receipt-container">
   <ng-container *ngFor="let row of formFields">
     <div class="row">
       <ng-container *ngIf="!isArray(row.cols)">
