--- a/front-end/src/app/shared/scss/_global.scss
+++ b/front-end/src/app/shared/scss/_global.scss
@@ -10,6 +10,7 @@
 @import '../../../../node_modules/bootstrap/scss/modal';
 @import '../../../../node_modules/bootstrap/scss/utilities';
 @import '../../../../node_modules/bootstrap/scss/forms';
+@import '../../../../node_modules/bootstrap/scss/input-group';
 
 @import url('https://fonts.googleapis.com/css?family=Karla');
 @font-face {
